--- a/LKWallet/Info.plist
+++ b/LKWallet/Info.plist
@@ -6,6 +6,19 @@
         <string>$(DEVELOPMENT_LANGUAGE)</string>
         <key>CFBundleDisplayName</key>
         <string>玩客钱包</string>
+        <key>CFBundleDocumentTypes</key>
+        <array>
+            <dict>
+                <key>CFBundleTypeName</key>
+                <string>data</string>
+                <key>LSHandlerRank</key>
+                <string>Owner</string>
+                <key>LSItemContentTypes</key>
+                <array>
+                    <string>public.data</string>
+                </array>
+            </dict>
+        </array>
         <key>CFBundleExecutable</key>
         <string>$(EXECUTABLE_NAME)</string>
         <key>CFBundleIdentifier</key>
@@ -17,9 +30,32 @@
         <key>CFBundlePackageType</key>
         <string>APPL</string>
         <key>CFBundleShortVersionString</key>
-        <string>0.2.5</string>
+        <string>0.3.0</string>
+        <key>CFBundleURLTypes</key>
+        <array>
+            <dict>
+                <key>CFBundleTypeRole</key>
+                <string>Editor</string>
+                <key>CFBundleURLName</key>
+                <string>com.tuluobo.wkwallet</string>
+                <key>CFBundleURLSchemes</key>
+                <array>
+                    <string>wkc</string>
+                </array>
+            </dict>
+            <dict>
+                <key>CFBundleTypeRole</key>
+                <string>Editor</string>
+                <key>CFBundleURLName</key>
+                <string>com.qq</string>
+                <key>CFBundleURLSchemes</key>
+                <array>
+                    <string>mqqapi</string>
+                </array>
+            </dict>
+        </array>
         <key>CFBundleVersion</key>
-        <string>25</string>
+        <string>30</string>
         <key>Fabric</key>
         <dict>
             <key>APIKey</key>
