--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 osx_image: xcode9.2
 language: swift
-xcode_workspace: LKWallet.xcodeworkspace
+xcode_workspace: LKWallet.xcworkspace
 xcode_scheme: LKWallet
+xcode_sdk: iphonesimulator
+install: pod install --repo-update
+script:
+  - xcodebuild -workspace LKWallet.xcworkspace -scheme LKWallet -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone X,OS=11.2' build
